Add store &  get global css,js again which are read through Site Name.

--- a/app/products/views/gender.tmpl
+++ b/app/products/views/gender.tmpl
@@ -35,7 +35,7 @@
   </div>
 
   <div class="grid__col is-10 product_lists">
-    <h1>ALL PRODUCTS (8)</h1>
+    <h1>ALL PRODUCTS</h1>
     <ul class="grid">
       {{range .Products}}
         <li class="grid__col is-3">
@@ -47,7 +47,6 @@
                 <div class="stats-container">
                   <span class="product_price">${{.Price}}</span>
                   <span class="product_name">{{.Name}}</span>
-
                   <div class="product_meta">
                     <strong>SIZES</strong>
                     <span>
