--- a/public/stylesheets/layout/_main.scss
+++ b/public/stylesheets/layout/_main.scss
@@ -537,7 +537,7 @@ main {
     padding-bottom: 120px;
     h1 {
         font-size: 16px;
-        font-weight: 700;
+        // font-weight: 700;
         padding-left: 10px;
     }
     .product_options {
@@ -549,7 +549,7 @@ main {
         h2 {
             margin-top: 0;
             font-size: 15px;
-            font-weight: 700;
+            // font-weight: 700;
             border-bottom: 1px solid #ddd;
             padding-bottom: 12px;
         }
@@ -630,7 +630,7 @@ main {
             }
             .product_name {
                 font-size: 15px;
-                font-weight: 700;
+                // font-weight: 700;
             }
             .product_price {
                 float: right;
