--- a/app/views/layouts/application.tmpl
+++ b/app/views/layouts/application.tmpl
@@ -4,10 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {{render_seo_tag}}
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0"/>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i|Playfair+Display|Raleway" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i|Playfair+Display|Raleway" rel="stylesheet"> -->
     <link rel="stylesheet" media="all" href="/dist/qor.css">
     <script src="/vendors/jquery.js"></script>
-    <link href="//use.fontawesome.com/6a90f27203.css" media="all" rel="stylesheet">
+    <!--<link href="//use.fontawesome.com/6a90f27203.css" media="all" rel="stylesheet"> -->
   </head>
 
   <body>
@@ -76,7 +76,7 @@
         <div class="grid">
           <div class="grid__col is-8">
             <h4>{{ t "layout.connect" }}</h4>
-            <div class="society">
+            <!--<div class="society">
               <a href="#"><img src="/images/twitter.png" /></a>
               <a href="#"><img src="/images/facebook.png" /></a>
               <a href="#"><img src="/images/gplus.png" /></a>
@@ -84,7 +84,7 @@
             </div>
 
             {{ t "layout.about_qor" }}
-
+            -->
             <!-- Switch language -->
             <div class="footer__change-language">
               <select>
@@ -112,6 +112,7 @@
     </footer>
 
     <script src="/dist/app.js"></script>
-    {{render "shared/amazon_pay"}}
+
+    {{/* {{render "shared/amazon_pay"}} */}}
   </body>
 </html>
