--- a/public/stylesheets/layout/_header.scss
+++ b/public/stylesheets/layout/_header.scss
@@ -16,8 +16,8 @@
         padding: 0 16px;
         display: inline-block;
         text-transform: uppercase;
-        font-weight: 600;
-        font-size: 15px;
+        // font-weight: 600;
+        // font-size: 15px;
     }
 
     .header__mobileicon {
@@ -87,7 +87,7 @@
                     float: none;
                     color: #000;
                     text-align: left;
-                    font-weight: 400;
+                    // font-weight: 400;
                     font-size: 13px;
                     padding: 8px 16px;
                 }
@@ -114,7 +114,7 @@
         .header__func-account {
             color: #fff;
             font-size: 12px;
-            font-weight: 400;
+            // font-weight: 400;
             text-align: center;
             padding: 0 16px;
             float: none;
