--- a/public/stylesheets/base/_variables.scss
+++ b/public/stylesheets/base/_variables.scss
@@ -36,7 +36,7 @@ Typography
 https://www.google.com/fonts/specimen/Titillium+Web
 */
 
-$font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+// $font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 
 /*
 Grid Variables
