--- a/public/stylesheets/base/_typography.scss
+++ b/public/stylesheets/base/_typography.scss
@@ -28,7 +28,7 @@ html {
 }
 body {
     background-color: white;
-    font-weight: 300;
+    // font-weight: 400;
     line-height: 1.45;
     color: #333;
     font-family: $font-family;
